# lem-gmsh

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  README.md  configure.ac  mesh_2.msh
.circleci/: config.yml
include/: element.h  element.tcc  element_map.h  elements.h  mesh.h  mesh.tcc  notes  settings.h  surface.h  surfaces.h  vertex.h
src/: element.cc  main.cc  mesh.cc  settings.cc
